fix(performance-tests): assign much more resources; run on beefier node that is not preemptible
also: continuous Garbage Collection for CamBPM (sauce: https://blog.sokolenko.me/2014/11/javavm-options-production.html)

related to SRE-603